tests/ui/diagnostic_namespace/do_not_recommend/feature-gate-do_not_recommend.next.stderr
error[E0277]: the trait bound `u8: Bar` is not satisfied
  --> $DIR/feature-gate-do_not_recommend.rs:18:11
   |
LL |     stuff(1u8);
   |     ----- ^^^ the trait `Bar` is not implemented for `u8`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `stuff`
  --> $DIR/feature-gate-do_not_recommend.rs:15:13
   |
LL | fn stuff<T: Bar>(_: T) {}
   |             ^^^ required by this bound in `stuff`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
